--- a/.env.example
+++ b/.env.example
@@ -32,7 +32,7 @@ NEXT_PUBLIC_DOTS_BE_END_POINT=https://dots.34.101.43.103.nip.io/dots-be/api
 NEXT_PUBLIC_TOA_END_POINT=https://dots.34.101.43.103.nip.io/sso
 NEXT_PUBLIC_BPMS_BE_END_POINT=https://dots.34.101.43.103.nip.io/tkyc/api
 NEXT_PUBLIC_SAP_END_POINT=https://api2.tugu.com/sap_uat/api
-NEXT_PUBLIC_BASE_URL=https://dots.34.101.43.103.nip.io/dots
+NEXT_PUBLIC_BASE_URL=https://dots.34.101.43.103.nip.io/dots-fe-test
 # NEXT_PUBLIC_MFILES_END_POINT=http://jktvmfiles02.tugu.com
 NEXT_PUBLIC_MFILES_END_POINT=http://jktvmfiles01.tugu.com
 # NEXT_PUBLIC_MFILES_END_POINT=https://mf.tugu.com/vnext
